# Computer_Vision_Project

./: .gitignore  CMakeLists.txt  README.md  execAll.sh
data/: README.md
data/results/tray1/: mIoU.txt
data/results/tray1/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
data/results/tray2/: mIoU.txt
data/results/tray2/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
data/results/tray3/: mIoU.txt
data/results/tray3/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
data/results/tray4/: mIoU.txt
data/results/tray4/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt  leftover2_bounding_box.txt  (+1 more)
data/results/tray5/: mIoU.txt
data/results/tray6/: mIoU.txt
data/results/tray7/: mIoU.txt
data/results/tray8/: mIoU.txt
data/train/: train.txt
dataset/tray1/bounding_boxes/: food_image_bounding_box.txt  leftover1_bounding_box.txt  leftover2_bounding_box.txt  leftover3_bounding_box.txt
dataset/tray2/bounding_boxes/: food_image_bounding_box.txt
include/: dataHandling.h  foodRecognition.h  foodSegmentation.h  leftoverEst.h  resultsEvaluation.h
python/: coco_eval.py  coco_utils.py  engine.py  finetune.py  food_recognition.py  prepDataset.py  transforms.py
src/: dataHandling.cpp  foodRecognition.cpp  foodSegmentation.cpp  leftoverEst.cpp  main.cpp  performances.cpp  resultsEvaluation.cpp
(+16 files in other folders)
